# src/db/models/contacts.js
@@ -1,39 +1,0 @@
-import mongoose from 'mongoose';
-
-const contactSchema = new mongoose.Schema(
-  {
-    name: {
-      type: String,
-      required: true,
-    },
-    phoneNumber: {
-      type: String,
-      required: true,
-    },
-    email: {
-      type: String,
-      required: false,
-    },
-    isFavourite: {
-      type: Boolean,
-      default: false,
-    },
-    contactType: {
-      type: String,
-      enum: ['work', 'home', 'personal'],
-      required: true,
-    },
-    userId: {
-      type: mongoose.Schema.Types.ObjectId,
-      ref: 'User',
-      required: true,
-    },
-    photo: { type: String },
-  },
-  {
-    timestamps: true,
-    versionKey: false,
-  },
-);
-
-export const contactsCollection = mongoose.model('Contact', contactSchema);
