# swagger/components/schemas.yaml
@@ -100,28 +100,18 @@ schemas:
         type: string
         example: Not Found
 
-  Contact:
+  Chat:
     type: object
     required:
       - name
-      - phoneNumber
-      - contactType
+      - surname
     properties:
       name:
         type: string
-        example: 'John Doe'
-      phoneNumber:
+        example: 'John '
+      surname:
         type: string
-        example: '+1234567890'
-      email:
-        type: string
-        example: 'john.doe@example.com'
-      isFavourite:
-        type: boolean
-        example: false
-      contactType:
-        type: string
-        enum: ['work', 'home', 'personal']
+        example: 'Doe'
       photo:
         type: string
         example: 'http://example.com/photo.jpg'
